prodMetadata/src/objects/Referral__c.object
<CustomObject>
    <fields>
        <fullName>Benefit_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Benefit Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_We_Contact_You_About_Your_Responses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can We Contact You About Your Responses?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Manager_Customer_Service__c</fullName>
        <inlineHelpText>Client to be interviewed by Program Manager</inlineHelpText>
        <label>Case Manager Customer Service</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Manager_Quality__c</fullName>
        <inlineHelpText>Client to be independently interviewed by Program Manager</inlineHelpText>
        <label>Case Manager Quality</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Manager_Timeliness__c</fullName>
        <inlineHelpText>Client to be interviewed by Program Manager</inlineHelpText>
        <label>Case Manager Timeliness</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Manager__c</fullName>
        <inlineHelpText>Client to be interviewed by Program Manager</inlineHelpText>
        <label>Case Manager Effectiveness</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client_Notes_on_Case_Manager__c</fullName>
        <label>Client Notes on Case Manager:</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Notes_on_Program__c</fullName>
        <label>Client Notes on Program:</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Service__c</fullName>
        <label>Customer Service</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Referral__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date of Referral</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effectiveness__c</fullName>
        <label>Effectiveness</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Focus_Area_for_Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will be pulled by a workflow rule &quot;Referral Focus Area default to Program Focus Area&quot; to match the Focus Area for the Program, and should be updated after saving the field if it needs to be different from the Program&apos;s Focus Area.</description>
        <inlineHelpText>This will be automatically pulled to match the Focus Area for the Program, and should be updated after saving the field if it needs to be different from the Program&apos;s Focus Area.</inlineHelpText>
        <label>Focus Area for Referral</label>
        <referenceTo>Focus_Area__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Focus_Area_of_Program__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+Program__r.Focus_Area__c,  Program__r.Focus_Area__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Focus Area of Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Rating__c</fullName>
        <description>Case Manager&apos;s Rating on program for this referral</description>
        <inlineHelpText>Case Manager&apos;s Rating on program for this referral</inlineHelpText>
        <label>Master Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note_to_Client__c</fullName>
        <inlineHelpText>Case Manager&apos;s Note to Client</inlineHelpText>
        <label>Note to Client</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Rating__c</fullName>
        <label>Overall Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Description__c</fullName>
        <formula>Program__r.Public_Description__c</formula>
        <label>Program Description:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <label>Quality</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected by Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timeliness__c</fullName>
        <label>Timeliness</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Referral</label>
    <listViews>
        <fullName>Allison_s_referrals</fullName>
        <columns>NAME</columns>
        <columns>Date_of_Referral__c</columns>
        <columns>Program__c</columns>
        <columns>Focus_Area_of_Program__c</columns>
        <columns>Focus_Area_for_Referral__c</columns>
        <columns>Benefit_Received__c</columns>
        <columns>Case__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Mine</filterScope>
        <label>Allison&apos;s referrals</label>
    </listViews>
    <listViews>
        <fullName>Drew_s_referrals</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Focus_Area_for_Referral__c</columns>
        <columns>Focus_Area_of_Program__c</columns>
        <columns>Benefit_Received__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Drew Waldbaur</value>
        </filters>
        <label>Drew&apos;s referrals</label>
    </listViews>
    <nameField>
        <displayFormat>Ref-{000000}</displayFormat>
        <label>Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>